# usu-apex

./: README.md  pyproject.toml  setup.cfg
Input_Files/Math/Trigonometry/: pythagorean_theorem.py
src/: BeamSolver.py  Solver.py  TopicFactory.py  UnitFactory.py  main.py
src/BeamSolver/: Cantilever.py  SimplySupported.py
src/Input_Files/Math/Graphing/: ThreeDPlotter.py  TwoDPlotter.py
src/Input_Files/Math/Trigonometry/: Law_of_Cosines.py  pythagorean_theorem.py
src/Input_Files/MechanicsOfMaterials/BeamSolver/: Cantilever.py
src/Input_Files/MechanicsOfMaterials/MohrsCricle/: MohrsCircle.py
src/Input_Files/MechanicsOfMaterials/basicCalculations/: stress.py
src/Input_Files/Physics/Constant Angular Acceleration/: Angular_Acceleration.py  Angular_Position.py  Angular_Velocity.py
src/Input_Files/Physics/Orbital Mechanics/: Orbital_Period.py
src/Input_Files/Physics/Projectile_Motion/: Displacement_in_x.py  Distance_in_y.py  Initial_Velocity_in_x.py  Initial_Velocity_in_y.py  Projectile_Distance_in_x.py  Projectile_Distance_in_x_specialcase.py  (+3 more)
src/Trigonometry/Trianglegeometry/: Pythagoreantheorem.py
src/Units/: acceleration.py  force.py  length.py  pressure.py
src/apex/: __main__.py
src/apex/Helper/: GenerateInputFiles.py  Solver.py  UnitHelper.py
src/apex/Units/: acceleration.py  angle.py  force.py  length.py  mass.py  pressure.py  stress.py  time.py  torque.py  velocity.py
src/usu-apex/: __main__.py
src/usu-apex/Units/: mass.py
src/usu_apex/: main.py
tests/: check_init.py  in_depth_Solver.py  input_files.py  run_all_tests.py  units.py
(+29 files in other folders)
