[metadata]
name = usu-apex
version = 0.0.26
author = AJ Burns, Karsten Jacobson, Ryan Lewis, Spencer Kimball
author_email = aj501173@gmail.com, karsten.jacobson1997@gmail.com, rylewis456@gmail.com, spencerkimball14@gmail.com
description = The Aggie Python Engineering eXecution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajburns147/usu-apex
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = engineering, python, usu

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    sympy
    matplotlib
python_requires = >=3.8

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    usu-apex = usu_apex.__main__:change_dir